# victron-dlms-gird-meter

./: .editorconfig  .gitignore  .pylintrc  README.md  config.py.example  dbus_dlms_meter.py  dlms_listener.py  pyproject.toml  requirements.txt  telegram_processor.py  version.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
telegrams/: SI_SODO_ElektroMaribor.yml  SI_SODO_Reduxi.yml  default.yml
tools/: validate_telegrams.py
