[project]
name = "victron-dlms-reader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gurux-common==1.0.13",
    "gurux-dlms==1.0.185",
    "gurux-net==1.0.23",
    "gurux-serial==1.0.21",
    "lxml==5.0.2",
    "pyyaml~=6.0.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.2.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = """
(
  ^ext/
| ^.venv/
| ^venv/
| ^build/
| ^dist/
)
"""
